ros2_ws/log/build_2025-02-11_14-19-10/my_py_pkg/stderr.log
  File "/home/abdy/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/node_python_1.py", line 3
    form rcply.node import Node
         ^^^^^
SyntaxError: invalid syntax

